<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:hint="@string/box_hint"
            android:autofillHints="0xff + 0xaa"
            android:inputType="text"
            android:background="@drawable/box_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/decimal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/change_me"
            android:textSize="16sp"
            android:background="@drawable/box_border"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/binary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/change_me"
            android:textSize="16sp"
            android:background="@drawable/box_border"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/octal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/oct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/change_me"
            android:textSize="16sp"
            android:background="@drawable/box_border"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/hexadecimal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/change_me"
            android:textSize="16sp"
            android:background="@drawable/box_border"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/accent" />

</androidx.constraintlayout.widget.ConstraintLayout>